<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".presentation.main.BackDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/do_you_want_to_exit_without_completing_the_compression_task" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnExit"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="5"
                    android:background="#F84467"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    app:backgroundTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="5"

                    android:background="@drawable/bg_gradient"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>